# ppt_stealer-rs

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/file-management/: Cargo.toml
crates/file-management/src/: lib.rs
crates/gtk4-interface/: Cargo.toml
crates/gtk4-interface/src/: lib.rs
crates/old/: Cargo.toml
crates/old/src/: main.rs
crates/old/src/connection_tools/: mod.rs
crates/old/src/watch_dog/: mod.rs
crates/stealer/: Cargo.toml
crates/stealer-cli/: Cargo.toml
crates/stealer-cli/src/: lib.rs  main.rs  watch_dog.rs
crates/stealer/src/: main.rs
src/: main.rs
src/WatchDog/: mod.rs
src/connection_tools/: mod.rs
src/watch_dog/: mod.rs
