[package]
name = "gtk4-interface"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
file-management = { path = "../file-management" }

gtk = { version = "0.9.6", package = "gtk4" }
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_5"] }
