[package]
name = "stealer"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true

[dependencies]
cli = { path = "../cli" }
stealer-cli = { path = "../stealer-cli" }
file-management = { path = "../file-management" }
gtk4-interface = { path = "../gtk4-interface" }

log = "0.4.26"
env_logger = "0.11.7"
